// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp />  debe de mostrar una lista de categorias  1`] = `
<Fragment>
  <h2>
    CounterApp
  </h2>
  <AddCategory
    SetCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball Z"
      key="Dragon Ball Z"
    />
    <GifGrid
      category="Hunter x Hunter"
      key="Hunter x Hunter"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp />  debe de mostrarse correctamente  1`] = `
<Fragment>
  <h2>
    CounterApp
  </h2>
  <AddCategory
    SetCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
